# sec-financial-statement-data-set-daily-processing

./: .gitignore  CHANGELOG.md  Infos.txt  README.md  SecProjects.md  TradingSymbol_notes.txt  environment.yml  flyway.conf  format_code.bat  missing_index_json.csv  pyproject.toml  todos.txt  todos_vscode.txt
.github/: FUNDING.yml
.github/workflows/: python-release.yml  python-tests.yml
_00_common/: DBManagement.py  DebugUtils.py  SecFileUtils.py  indexer.py
_00_common/testdata/: grsv-10k_20201231_htm.xml  urg-20201231_pre.xml
_01_index/: SecIndexFileParsing.py  SecIndexFilePostProcessing.py  SecIndexFileProcessing.py
_02_xml/: SecFeedDataManagement.py  SecFeedDataManager.py  SecFileManagement.py  SecFilesProcessing.py  SecIndexFileManagement.py  SecNumXmlParsing.md  SecNumXmlParsing.py  SecPreXmlParsing.py  SecXmlFileParsing.py  SecXmlFileProcessing.py  SecXmlNumParsing.py  SecXmlParsingBase.py  SecXmlPreParsing.py
data/: aapl-20200926_htm-clean.xml  aapl-20200926_pre-clean.xml  pre_apple_10k_2020_q4_partly_sorted.txt
ddl/: V10__Alter_TableNames.sql  V1__Create_SecFeed_table.sql  V2__Alter_SecFeed_table_add_duplicated.sql  V3__Create_SecIndexFile_table.sql  V3__Create_SecReportProcessing_table.sql  V4__Create_MassTesting_tables.sql  V4__Create_SecReportProcessing_table.sql  V5__Alter_MassTesting_tables_add_inpth.sql  V5__Alter_SecReportProcessing_add_state.sql  V6__Alter_SecFeed_add_filingdetails.sql  V6__Alter_SecReportProcessing_add_dailyzip.sql  V7__Alter_SecReportProcessing_add_filingdetails.sql  V8__Alter_SecFeeds_table.sql  V9__Alter_SecReportProcessing_table.sql
doc/: code_overview.md  overview.md  parsing_notes.md  process.md  setup.md
doc/_01_index/: index.md
doc/_02_xml/parsing/: parsing_notes.md
doc/_03_dailyzip/: CreationSub.md
doc/testing/: diff.csv  num_mass_test_results.md  pre_mass_test_results.md
main/: SecDataPreparer.py
notes/: Infos.txt  ai_support_notes.txt  devenv_notes.txt  todos.txt  todos_vscode.txt
notes/archive/: Infos.txt
notes/code/: code_overview.md
notes/code/_01_index/: index.md
notes/code/_02_xml/: xml.md
notes/code/_04_dailyzip/: CreationSub.md
sandbox/data/: cleaned_html.txt  ix_header.txt
sandbox/testintegration/num/: NumMassTestingTests.py
sandbox/testintegration/singlecompare/: test_single_compare.py
sandbox/testintegration/sub/: SubMassTestingTests.py  SubMassTestingTools.py
sandbox/trials/: clean_num_xml.py  clean_pre_xml.py  jupyter_trials.ipynb  sqllite_trials.py  test_clean_and_parse_lab.py  test_clean_htm_xml.py
sandbox/utils_debug/: parsenumfile.py  parseprefile.py
src/: SecData.py  SecDataPreparer.py
src/_00_common/: DBBase.py  DBDebugUtils.py  DBManagement.py  DebugUtils.py  DownloadUtils.py  ParallelExecution.py  SecFileUtils.py
src/_00_common/testdata/: cohu-20201226_pre.xml  nymt-20201231_pre.xml  oii-20201231_htm.xml
src/_01_index/: SecFullIndexFilePostProcessing.py  SecFullIndexFileProcessing.py  SecIndexFileParsing.py  SecIndexFilePostProcessing.py  SecIndexFileProcessing.py  SecIndexIndexJsonParsing.py
src/_01_index/archive/: SecIndexFileParsing.py
src/_01_index/db/: IndexPostProcessingDataAccess.py
src/_02_xml/: SecXmlFileDownloading.py  SecXmlFileParsing.py  SecXmlFilePreProcessing.py  SecXmlFileProcessing.py  SecXmlNumParsing.py  SecXmlParsingBase.py  SecXmlPreParsing.py
src/_02_xml/db/: XmlFileDownloadingDataAccess.py  XmlFilePreProcessingDataAccess.py
src/_02_xml/num/: _1_SecNumXmlExtracting.py  _2_SecNumXmlTransformation.py
src/_02_xml/parsing/: SecXmlNumParsing.py
src/_02_xml/pre/: SecPreXmlExtracting.py  SecPreXmlPreparation.py  SecPreXmlProcessing.py  SecPreXmlTransformation.py  SecXmlPreGroupTransformation.py  _2_SecPreXmlTransformation.py  _3_SecPreXmlGroupTransformation.py  _4_1_SecPreXmlStatementTypeEvaluation.py  _4_SecPreXmlProcessing.py
src/_03_dailyzip/: DailyZipCreating.py
src/_03_dailyzip/db/: DailyZipCreatingDataAccess.py
src/_04_seczip/: SecZipDownloading.py
src/secdaily/: SecData.py
src/secdaily/_00_common/: BaseDefinitions.py  DBBase.py  DBDebugUtils.py  DebugUtils.py  DownloadUtils.py  ParallelExecution.py  ProcessBase.py  SecFileUtils.py
src/secdaily/_01_index/: SecFullIndexFilePostProcessing.py  SecFullIndexFileProcessing.py
src/secdaily/_02_xml/: SecXmlFileDownloading.py  SecXmlFileParsing.py  SecXmlFilePreProcessing.py
src/secdaily/_03_dailyzip/: DailyZipCreating.py
src/secdaily/_03_secstyle/: SECStyleFormatter.py  SECStyleFormatting.py
test/_00_common/: DBManagement_test.py  SecFileUtils_test.py
test/_01_index/: SecFullIndexFileProcessing_test.py  SecIndexFileManagement_test.py  SecIndexFileParsing_test.py  SecIndexFilePostProcessing_test.py  SecIndexFileProcessing_test.py
test/_02_xml/: SecFeedDataManagement_test.py  SecFileManagement_test.py  SecFilesProcessing_test.py  SecNumXmlParsingContent_test.py  SecNumXmlParsing_test.py  SecPreXmlParsingContent_test.py  SecPreXmlParsing_test.py  SecXmlFileParsing_test.py  SecXmlFileProcessing_test.py  SecXmlNumParsingContent_test.py  SecXmlNumParsing_test.py  SecXmlPreParsingContent_test.py  SecXmlPreParsing_test.py
test/_99_trials/: DirectDBAccess.py  clean_num_xml.py  clean_pre_xml.py  notizen.txt  sec_edgar_downloader.py  sqllite_trials.py  testing.py
test_ext/testintegration/: MassContentTesting.py  MassTestingTests.py  MassTestingTools.py  PreMassTestingTests.py  SecXmlNumParsingContent_test.py  mass_test_results.md
test_ext/trials/: clean_pre_xml.py  etreetrials.py  jupyter_trials.ipynb  notizen.txt
test_ext/utils_debug/: parsenumfile.py  parseprefile.py
testintegration/: MassContentTesting.py
tests/_00_common/: SecFileUtils_test.py
tests/_01_index/: SecFullIndexFileProcessing_test.py
tests/_02_xml/: SecXmlFileDownloading_test.py  SecXmlFileParsing_test.py
tests/end_to_end/: endtoend_helper.py  test_endtoend.py
trials/: DirectDBAccess.py  clean_pre_xml.py  companyinfo.py  download_xml_files.py  find_main_xbrl_trials.py  sec_edgar_downloader.py  testing.py  trialwithnumparsing.py
utils_debug/: parsenumfile.py  parseprefile.py  queries.sql
(+88 files in other folders)
