[project]
name = "dailysec"
version = "0.1.0"
description = ""
authors = [
    { name = "Hansjoerg", email = "hansjoeg.wingeier@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry.dependencies]
pandas = "^2.2"
requests = "^2.32"
pathos = "^0.3"
lxml = "^4.8"
pyarrow = "^19"

[tool.poetry]
packages = [
    { include = "secdaily", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pylint = "^3.0.3"
black = "^24.2.0"
ruff = "^0.5.3"

[tool.ruff]
# Explicitly enable F401 (unused imports) and other rules
lint.select = [
    "F401",  # unused imports
    "E",     # pycodestyle errors
    "F",     # other pyflakes rules
    "I",     # isort
    "W",     # pycodestyle warnings
]
line-length = 120
fix = true

[tool.black]
line-length = 120

[tool.pylint.'MAIN']
# Base settings that apply to everything
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0801",  # duplicate-code
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "W0511",  # fixme
]

[tool.pylint.'tests/*']
# More relaxed settings for test files
disable = [
    "R0801",  # duplicate-code
    "W0212",  # protected-access
    "W0612",  # unused-variable (common in pytest with fixtures)
    "W0613",  # unused-argument (common in pytest with fixtures)
    "W0621",  # redefined-outer-name (common in pytest with fixtures)
]

extension-pkg-allow-list = [
    "lxml",
    "numpy"
]

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "sandbox/testintegration",  # Integration Tests
    "sandbox/trials"            # Experimenteller Code
]
